PDF invoice added Payment Summary

--- a/kinomart/.env
+++ b/kinomart/.env
@@ -1,5 +1,6 @@
 SECRET_KEY=django-insecure-5m_#ue4$qkq3c54r1#s=k2y=@$+m_&wdml4#d7=@@08)&rhfmz
 DEBUG=True
+DATABASE_ENGINE=django.db.backends.postgresql
 DATABASE_NAME=kinomart_new
 DATABASE_USER=postgres
 DATABASE_PASSWORD=1234
